oh yea i code paying work too

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       <p>
         Jack Dempsey<br />
         co-founder of <a href="http://euraeka.com/">Euraeka Technologies</a><br />
+        engineer available for hire
         jack dot dempsey at gmail dot com
       </p>
     </div>
