--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
    <meta name="author" content="Jack Dempsey" />
 
    <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+   <link rel="stylesheet" href="css/syntax.css" type="text/css" />
 
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection" />
 
 </head>
 <body>
@@ -43,7 +43,6 @@
       <p>
         Jack Dempsey<br />
         co-founder of <a href="http://euraeka.com/">Euraeka Technologies</a><br />
-        engineer available for hire
         jack dot dempsey at gmail dot com
       </p>
     </div>
