add in rss feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,9 @@
         <a href="http://twitter.com/jackdempsey/">twitter.com/jackdempsey</a><br />
       </p>
     </div>
+    <div class="rss">
+      <a href="http://feeds.feedburner.com/jack-dempsey"><img src="/images/rss.jpg" alt="Subscribe to RSS Feed" /></a>
+    </div>
   </div>
 </div>
 
