--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
     <div class="contact">
       <p>
         Jack Dempsey<br />
-        co-founder of <a href="http://euraeka.com/">Euraeka Technologies</a><br />
+        co-founder of <a href="http://anthemwares.com/">Anthem Wares</a><br />
         jack dot dempsey at gmail dot com
       </p>
     </div>
